# llm_toy

./: .gitignore  README.md  pyproject.toml
add_text_using_embedding/sample/: data_prepare.py  work.py
chatgpt_35/demo/: demo_gpt35_deepl_talk.py
chatgpt_35/sample/: sample_deepl_translate.py  sample_gpt35_talk.py
chatgpt_35/utils/: deepl_wrapper.py  get_config.py  openai_wrapper.py
